[gd_scene load_steps=6 format=3 uid="uid://brb3pu2jgl016"]

[ext_resource type="Script" path="res://creditos.gd" id="1_5rovm"]
[ext_resource type="Texture2D" uid="uid://dx5y2jfj6tnv" path="res://Animations/Creditos-Sheet.png" id="2_ruqeq"]

[sub_resource type="Animation" id="Animation_tcn2h"]
resource_name = "creditos"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_llyrp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khtt6"]
_data = {
"RESET": SubResource("Animation_llyrp"),
"creditos": SubResource("Animation_tcn2h")
}

[node name="Creditos" type="Node2D"]
script = ExtResource("1_5rovm")

[node name="creditos_sprite" type="Sprite2D" parent="."]
position = Vector2(1000, 534)
texture = ExtResource("2_ruqeq")
hframes = 8

[node name="creditos_animation" type="AnimationPlayer" parent="creditos_sprite"]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_khtt6")
}

[connection signal="animation_finished" from="creditos_sprite/creditos_animation" to="." method="_on_creditos_animation_animation_finished"]
